turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: not found: value changeCouleurBrose
	changeCouleurBrose(c)
        ^